# clenshawpy

./: pyproject.toml  setup.cfg
